# ab-transcript

./: .dockerignore  .env.example  .flake8  .gitignore  BUILD_WINDOWS.md  Dockerfile  PACKAGING_COMPARISON.md  README.md  README_NEW.md  build_windows.bat  build_windows_nuitka.bat  docker-compose.yml  launcher.py  pyproject.toml  recorder_client.spec  setup.cfg  start_client.sh  start_server.sh
.github/: IMPLEMENTATION_NOTES.md
src/: __init__.py  config.py
src/audio/: __init__.py  capture.py  diarization.py  summarizer.py  transcription.py  utils.py
src/client/: __init__.py  api_client.py
src/server/: __init__.py  app.py  job_manager.py  models.py  processing_queue.py  processor.py
src/ui/: __init__.py  app.py  app_new.py
tests/: test_audio_devices.py  test_diarization.py  test_record.py  test_summarizer.py  test_transcribe.py  test_workflow.py  test_workflow_from_file.py
